--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "MOST Web Framework client module for angular",
   "main": "./bundles/themost-angular.umd.js",
   "peerDependencies": {
+    "@themost/xml": "^2.5.1",
     "@themost/client":"^2.5.1",
-    "@angular/common": ">=6.0.0",
-    "@angular/core": ">=6.0.0",
-    "@angular/http": ">=6.0.0",
-    "@angular/platform-browser": ">=6.0.0",
-    "@angular/platform-browser-dynamic": ">=6.0.0",
-    "rxjs": "~6.3.3",
+    "@angular/common": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
+    "@angular/core": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
+    "@angular/http": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
+    "@angular/platform-browser": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
+    "@angular/platform-browser-dynamic": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
+    "rxjs": "^6 | ^7",
     "core-js": "^2.5.7",
     "zone.js": "^0.8.26"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/themost-framework/themost-client.git"
+    "url": "git+https://github.com/themost-framework/angular.git"
   },
-  "author": "Kyriakos Barbounakis <k.barbounakis@gmail.com>",
+  "author": "THEMOST LP <support@themost.io>",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/themost-framework/themost-client/issues"
+    "url": "https://github.com/themost-framework/angular/issues"
   },
-  "homepage": "https://github.com/themost-framework/themost-client#readme",
+  "homepage": "https://github.com/themost-framework/angular#readme",
   "dependencies": {
   }
 }
