--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,10 @@ jobs:
       - run: npm run ng -- generate library angular --create-application=false --skip-git --skip-tests --inline-style
       - run: rm -rf projects/angular
       - run: git clone https://github.com/themost-framework/angular.git projects/angular
+      - run: cd projects/angular
+      - run: npm i npm-install-peers --no-save
+      - run: ./node_modules/.bin/npm-install-peers
+      - run: cd ../..
       - run: npm run ng build angular
       - run: cd dist/angular
       - run: npm publish --access=public
