--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "MOST Web Framework client module for angular",
   "main": "./bundles/themost-angular.umd.js",
   "peerDependencies": {
-    "@themost/xml": "^2",
-    "@themost/client":"^2",
-    "@angular/common": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
-    "@angular/core": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
-    "@angular/http": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
-    "@angular/platform-browser": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
-    "@angular/platform-browser-dynamic": "^6 | ^7 | ^8 | ^9 | ^10 | ^11",
-    "rxjs": "^6 | ^7",
-    "core-js": "^2.5.7",
+    "@angular/common": "^6",
+    "@angular/core": "^6",
+    "@angular/http": "^6",
+    "@angular/platform-browser": "^6",
+    "@angular/platform-browser-dynamic": "^6",
+    "core-js": "^2 || ^3",
+    "rxjs": "^6 || ^7",
     "zone.js": "^0.8.26"
+  },
+  "dependencies": {
+    "@themost/client": "^2.5.6",
+    "@themost/xml": "^2.5.2"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,5 @@
   "bugs": {
     "url": "https://github.com/themost-framework/angular/issues"
   },
-  "homepage": "https://github.com/themost-framework/angular#readme",
-  "dependencies": {
-  }
+  "homepage": "https://github.com/themost-framework/angular#readme"
 }
