--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,11 +20,10 @@ jobs:
       - run: rm -rf projects/angular
       - run: git clone https://github.com/themost-framework/angular.git projects/angular
       - run: cd projects/angular
-      - run: npm i npm-install-peers --no-save
-      - run: ./node_modules/.bin/npm-install-peers
+      - run: npm ci
       - run: cd ../..
       - run: ng build angular
-      - run: cd dist/angular
+      - run: cd projects/angular/dist
       - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
