update build process

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,35 +1,25 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": ".",
-    "target": "es5",
-    "module": "es2015",
-    "moduleResolution": "node",
+    "outDir": "../../out-tsc/angular",
+    "target": "es2015",
     "declaration": true,
-    "sourceMap": true,
+    "declarationMap": true,
     "inlineSources": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "types": [
-      "node"
-    ],
+    "types": [],
     "lib": [
-      "es2017",
-      "dom"
+      "dom",
+      "es2018"
     ]
   },
   "angularCompilerOptions": {
-    "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
     "enableResourceInlining": true
   },
   "exclude": [
-    "node_modules",
-    "test",
+    "src/test.ts",
     "**/*.spec.ts"
   ]
 }
