--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@angular/platform-browser-dynamic": "^11",
     "core-js": "^3",
     "rxjs": "^6",
-    "zone.js": "^0.11.3"
-  },
-  "dependencies": {
+    "zone.js": "^0.11.3",
     "@themost/client": "^2.5.6",
     "@themost/xml": "^2.5.2"
+  },
+  "dependencies": {
   },
   "repository": {
     "type": "git",
