--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,22 +1,16 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "sourceMap": true,
     "types": [
-      "jasmine",
-      "node"
-    ],
-    "paths": {
-      "@themost/client": [ "../client/src/index" ],
-      "@themost/client/*": [ "../client/src/*" ]
-    }
+      "jasmine"
+    ]
   },
   "files": [
     "src/test.ts"
   ],
   "include": [
-    "**/*.ts",
     "**/*.spec.ts",
     "**/*.d.ts"
   ]
