--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - name: create angular cli project
-        run: npx @angular/cli@6.2.9 new build --skip-tests --minimal --routing --skip-git
+        run: npx @angular/cli@6.2.9 new build --skip-tests --minimal --routing --skip-git --strict false --style scss
       - name: create angular library
         working-directory: build
         run: npm run ng -- generate library angular --create-application=false --skip-git --skip-tests --inline-style
