--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 14
           registry-url: https://registry.npmjs.org/
       - name: create angular cli project
-        run: npx @angular/cli@11 new build --skip-tests --minimal --routing --skip-git --strict false --style scss
+        run: npx @angular/cli@12 new build --skip-tests --minimal --routing --skip-git --strict false --style scss
       - name: set analytics off
         working-directory: build
         run: npm run ng analytics off -- --global
@@ -28,15 +28,12 @@ jobs:
       - name: clone repository
         working-directory: build
         run: git clone https://github.com/themost-framework/angular.git projects/angular
-      - name: install dependencies
-        working-directory: build/projects/angular
-        run: npm ci
       - name: install peer dependencies
         working-directory: build/projects/angular
         run: npx @themost/peers
       - name: build library
         working-directory: build
-        run: npm run ng build angular -- --prod
+        run: npm run ng build angular
       - name: publish library
         working-directory: build/dist/angular
         run: npm publish --access=public
