--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,39 +3,19 @@ name: publish latest
 on:
   release:
     types: [released]
-env:
-  NG_CLI_ANALYTICS: false
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 20
           registry-url: https://registry.npmjs.org/
-      - name: create angular cli project
-        run: npx @angular/cli@15 new build --skip-tests --minimal --routing --skip-git --strict false --style scss
-      - name: set analytics off
-        working-directory: build
-        run: npm run ng analytics off -- --global
-      - name: create angular library
-        working-directory: build
-        run: npm run ng -- generate library angular --interactive false
-      - name: remove angular library
-        working-directory: build
-        run: rm -rf projects/angular
-      - name: clone repository
-        working-directory: build
-        run: git clone https://github.com/themost-framework/angular.git projects/angular
-      - name: install peer dependencies
-        working-directory: build/projects/angular
-        run: npx @themost/peers
       - name: build library
-        working-directory: build
-        run: npm run ng build angular
+        run: npm run build
       - name: publish library
-        working-directory: build/dist/angular
+        working-directory: dist/angular
         run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
