--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@themost/angular",
-  "version": "15.1.1",
+  "version": "17.1.1",
   "description": "MOST Web Framework client module for angular",
-  "scripts": {},
+  "scripts": {
+    "build": "ng-packagr -p ng-package.json -c tsconfig.lib.prod.json"
+  },
   "peerDependencies": {
-    "@angular/common": "^15",
-    "@angular/core": "^15",
-    "@angular/platform-browser": "^15",
-    "@angular/platform-browser-dynamic": "^15",
+    "@angular/common": "^15 || ^16 || ^17",
+    "@angular/core": "^15 || ^16 || ^17",
+    "@angular/platform-browser": "^15 || ^16 || ^17",
+    "@angular/platform-browser-dynamic": "^15 || ^16 || ^17",
     "@themost/client": "^2",
     "@themost/xml": "^2",
     "core-js": "^3",
     "rxjs": "~7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "~0.12.0 || ~0.14.0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,15 @@
     "url": "https://github.com/themost-framework/angular/issues"
   },
   "homepage": "https://github.com/themost-framework/angular#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "@angular/common": "^15 || ^16 || ^17",
+    "@angular/router": "^15 || ^16 || ^17",
+    "@angular/compiler": "^15 || ^16 || ^17",
+    "@angular/compiler-cli": "^15 || ^16 || ^17",
+    "@angular/core": "^15 || ^16 || ^17",
+    "@angular/forms": "^15 || ^16 || ^17",
+    "@angular/platform-browser": "^15 || ^16 || ^17",
+    "@angular/platform-browser-dynamic": "^15 || ^16 || ^17",
+    "ng-packagr": "^17.0.2"
+  }
 }
